--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <div class="menu-container">
             <a href="tel:0822409191" class="menu-button">
                 <i class="bi bi-headset menu-icon"></i>
-                CS Pluang Hubungi: 0822409191
+                WhatsApp Hubungi: 0822409191
             </a>
         
             <a href="https://wa.me/62822409191?text=Halo%20Pluang" class="menu-button" target="_blank" rel="noopener noreferrer">
