--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <ul>
                 <li>
                     <strong>Kontak Resmi Pluang</strong><br />
-                    Hubungi Call Center Pluang di <strong>0822409191</strong> untuk bantuan transaksi, deposit beli dan jual. Layanan tersedia Senin–Jumat 24 jam.
+                    Hubungi Call Center Pluang di <strong>+62 822-409-191</strong> untuk bantuan transaksi, deposit beli dan jual. Layanan tersedia Senin–Jumat 24 jam.
                 </li>
                 <li>
                     <strong>Layanan Pluang</strong><br />
