--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">    
-    <title>Pluang - CS 0822409191 - Layanan Pelanggan</title>
-    <meta name="description" content="Cs Pluang 24 Jam Hubungi 0822409191 Layanan Bantuan Pelanggan.">
+    <title>Pluang - CS - Layanan Pelanggan</title>
+    <meta name="description" content="Cs Pluang 24 Jam Hubungi +62 822-4091-91 Layanan Bantuan Pelanggan.">
     <meta name="keywords" content="pluang, cs pluang, deposit pluang, bantuan pluang, beli pluang, plu ang, jual pluang">
     <meta name="author" content="https://cspluangcrypto.site">
     <meta name="robots" content="index, follow">
@@ -202,7 +202,7 @@
             <ul>
                 <li>
                     <strong>Kontak Resmi Pluang</strong><br />
-                    Hubungi Call Center Pluang di <strong>+62 822-409-191</strong> untuk bantuan transaksi, deposit beli dan jual. Layanan tersedia Senin–Jumat 24 jam.
+                    Hubungi Call Center Pluang di <strong>+62 822-4091-91</strong> untuk bantuan transaksi, deposit beli dan jual. Layanan tersedia Senin–Jumat 24 jam.
                 </li>
                 <li>
                     <strong>Layanan Pluang</strong><br />
