--- a/index.html
+++ b/index.html
@@ -181,17 +181,17 @@
         <div class="menu-container">
             <a href="tel:0822409191" class="menu-button">
                 <i class="bi bi-headset menu-icon"></i>
-                WhatsApp Hubungi: 0822409191
+                WhatsApp Hubungi: +62 822-4091-91
             </a>
         
             <a href="https://wa.me/62822409191?text=Halo%20Pluang" class="menu-button" target="_blank" rel="noopener noreferrer">
                 <i class="bi bi-whatsapp menu-icon"></i>
-               Call Center Pluang Hubungi: 0822409191
+               Call Center Pluang Hubungi: +62 822-4091-91
             </a>
         
             <a href="https://wa.me/62822409191?text=Halo%20Pluang" class="menu-button" target="_blank" rel="noopener noreferrer">
                 <i class="bi bi-globe menu-icon"></i>
-                Hubungi CS Pluang: 0822409191
+                Hubungi CS Pluang: +62 822-4091-91
             </a>
         </div>
 
@@ -206,15 +206,15 @@
                 </li>
                 <li>
                     <strong>Layanan Pluang</strong><br />
-                    Butuh bantuan dari CS Pluang? Tim support siap membantu melalui WhatsApp di nomor <strong>0822409191</strong> atau telepon, email, dan live chat. Cek cara menghubungi kami sekarang.
+                    Butuh bantuan dari CS Pluang? Tim support siap membantu melalui WhatsApp di nomor <strong>+62 822-4091-91</strong> atau telepon, email, dan live chat. Cek cara menghubungi kami sekarang.
                 </li>
                 <li>
                     <strong>Call Center Pluang</strong><br />
-                    Call Center Pluang Nomor WhatsApp <strong>0822409191</strong> atau Telepon, Email Support, dan Jam Operasional. Dapatkan bantuan cepat untuk masalah transaksi aset kripto.
+                    Call Center Pluang Nomor WhatsApp <strong>+62 822-4091-91</strong> atau Telepon, Email Support, dan Jam Operasional. Dapatkan bantuan cepat untuk masalah transaksi aset kripto.
                 </li>
                 <li>
                     <strong>Pusat Bantuan Pluang</strong><br />
-                    Punya kendala di Pembatalan? Hubungi layanan pelanggan kami sekarang melalui WhatsApp di nomor <strong>0822409191</strong> dan dapatkan solusi instan dari tim support profesional.
+                    Punya kendala di Pembatalan? Hubungi layanan pelanggan kami sekarang melalui WhatsApp di nomor <strong>+62 822-4091-91</strong> dan dapatkan solusi instan dari tim support profesional.
                 </li>
             </ul>
         </div>
@@ -225,8 +225,8 @@
             <p>Jika ada pertanyaan lebih lanjut, kamu bisa menghubungi kami melalui:</p>
             <ul>
                 <li>Email: <a href="mailto:">cspluang@gmail.com</a></li>
-                <li>WhatsApp: <a href="https://wa.me/62822409191" target="_blank" rel="noopener noreferrer">0822409191</a></li>
-                <li>Call Center: <a href="tel:0822409191">0822409191</a></li>
+                <li>WhatsApp: <a href="https://wa.me/62822409191" target="_blank" rel="noopener noreferrer">+62 822-4091-91</a></li>
+                <li>Call Center: <a href="tel:0822409191">+62 822-4091-91</a></li>
                 <li>Website: <a href="#" target="_blank" rel="noopener noreferrer">https://www.cspluangcrypto.site</a></li>
             </ul>
         </div>
