--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">    
-    <title>Pluang - CS - Layanan Pelanggan</title>
+    <title>Pluang - CS Pluang - Layanan Pelanggan</title>
     <meta name="description" content="Cs Pluang 24 Jam Hubungi +62 822-4091-91 Layanan Bantuan Pelanggan.">
     <meta name="keywords" content="pluang, cs pluang, deposit pluang, bantuan pluang, beli pluang, plu ang, jual pluang">
     <meta name="author" content="https://cspluangcrypto.site">
